# Trial-Matching-Emulator

./: README.md  pyproject.toml
configs/: default.yaml
scripts/: run_pipeline.py  train_reranker.py
tests/: test_schema.py
trialmatch/: __init__.py  pipeline.py  schema.py
trialmatch/data/: __init__.py  loader.py  models.py
trialmatch/eval/: __init__.py  groundedness.py  retrieval_metrics.py
trialmatch/llm/: __init__.py  extractor.py  reasoner.py  rewriter.py
trialmatch/ranking/: __init__.py  features.py  reranker.py  train.py
trialmatch/retrieval/: __init__.py  base.py  tfidf.py
trialmatch/utils/: __init__.py  io.py
